@@ -10,6 +10,7 @@
     * Fix buffer overrun returning long diagnostic from driver
     * Cross call between wide and ascii error reporting in the driver when needed
     * Fix some possible unchecked memory references after malloc
+    * Prevent free( NULL ) in SQLGetDiagRecW
 
 8th-October-2013
 2.3.2
